# SCTF-2026

./: .gitignore  README.md
Crypto/Cipher_Chain/: README.md  writeup.md
Crypto/Cipher_Chain/attachment/: task1.txt
Crypto/Cipher_Chain/exp/: exptask1.py  exptask2.go  go.mod
Crypto/Cipher_Chain/sourcecode/: task2.go  (+1 more)
Crypto/Cuneiform/: README.md  wp.md
Crypto/invincible/: Readme.md  exp.py  wp.md
Misc/Chronostasis/: .dockerignore  README.md  docker-compose.yml
Misc/DeepSea_Finance/: README.md  docker-compose.yml
Misc/Don't poison me/: writeup-en.md  writeup.md
Misc/GatekCrash/: README.md
Misc/SYC4113/: README.md
Misc/The Last Honest Witness/: README.md
Misc/The music secret/: writeup-en.md  writeup.md
Pwn/CHAOS;HEAD/: README.md
Pwn/ParcelBridge Vault/: README.md
Pwn/UBW/: README.md
Pwn/heapMage/: README.md
Pwn/kMage/: README.md
Pwn/slang/: README.md
Reverse/Zombie_progression/: WP.md  Zombie_progression
Reverse/babel_furnace/: WP.md
Reverse/ghost_projection/: generate_packed_player.sh
Web/Transit Privilege/: writeup-en.md  writeup.md
Web/Web Shop/: Dockerfile  README.md  solve.py  write_up.md  write_up_en.md
Web/Web Shop/backend/: pyproject.toml
Web/Web Shop/backend/app/: bot.py  bot_replies.json  main.py  sandbox.py  support_ticket.py
Web/Web Shop/backend/web_shop_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Web/gateway/: .dockerignore  Dockerfile  README.md  WRITEUP-CN.md  WRITEUP.md  compose.yml  gateway.example.toml  gateway.toml  solve.py
Web/gateway/gateway/: Cargo.toml
Web/gateway/gateway/src/: config.rs  error.rs  gateway.rs  lib.rs  main.rs  router.rs  selector.rs  server.rs  upstream.rs
Web/gateway/vault/: Cargo.toml
Web/gateway/vault/src/: lib.rs  main.rs  router.rs  state.rs
Web/gateway/vault/src/handlers/: misc.rs
Web/great-sql/: writeup-en.md  writeup.md
Web/phpStilAlive/: writeup-en.md  writeup.md
(+174 files in other folders)
