[project]
name = "web-shop-backend"
version = "0.1.0"
description = "Web Shop challenge backend"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "pillow==11.0.0",
  "python-multipart==0.0.20",
  "langchain==0.3.27",
  "langchain-core==0.3.80"
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
