[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.9.1"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
http = "1.4.1"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "http1", "http2", "server"] }
hyper-rustls = { version = "0.27.9", features = ["http1", "http2", "webpki-roots"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "http2", "server", "tokio"] }
memchr = "2.8.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1.1.2"
tower = { version = "0.5.3", features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6.11", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
